# trellis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  registry.yaml  trust-policy.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sign-agents.yml  test.yml
agents/: nono-wrapper.sh
docs/: agents.md  architecture.md  pipelines.md  security.md  self-hosting.md
incubator/: cli.py  config.py
incubator/agents/: global-system-prompt.md
incubator/agents/ideation/: prompt.py
incubator/agents/implementation/: prompt.py
incubator/agents/release/: prompt.py
incubator/agents/validation/: prompt.py
incubator/agents/watchers/: competitive.py  research.py
incubator/comms/: notifications.py
incubator/core/: agent.py  agent_factory.py  audit.py  blackboard.py  migrations.py  registry.py  sandbox.py
incubator/defaults/: registry.yaml
incubator/orchestrator/: evolution.py  orchestrator.py  pool.py  worker.py
incubator/tools/: blackboard_tools.py  evolution_tools.py  knowledge_io.py
incubator/web/api/: app.py  filters.py  paths.py  websocket.py
pool/: presets.json
specs/: pool_scheduler.cfg  pool_scheduler.tla
tests/: conftest.py  sdk_twin.py  test_agent_deadline.py  test_audit.py  test_blackboard.py  test_cli_pool.py  test_config.py  test_e2e_init.py  test_e2e_pipeline.py  test_e2e_web_pipeline.py  test_evolution_tools.py  test_idea_routes_pipeline.py  test_identity.py  test_init.py  test_init_serve.py  test_knowledge_io.py  test_lock.py  test_migrate_project.py  test_migrations.py  test_phase.py  test_pipeline_config.py  test_pipeline_format.py  test_pool.py  test_pool_bugs.py  test_prose_parser.py  test_registry.py  test_sandbox.py  test_scheduling.py  test_serve.py  test_settings_quality_gate.py  test_tool_policy.py  test_upgrade.py  test_worker.py
trellis/: cli.py  config.py  human_log.py  log_setup.py  nono-wrapper.sh
trellis/agents/: global-system-prompt.md
trellis/agents/ideation/: agent.py  prompt.py
trellis/agents/release/: agent.py  (+1 more)
trellis/comms/: notifications.py  telegram.py
trellis/core/: activity.py  agent.py  agent_factory.py  audit.py  blackboard.py  lock.py  migrations.py  phase.py  pipeline_format.py  prose_parser.py  registry.py  sandbox.py  tool_policy.py
trellis/defaults/: .env.example  default.prose  global-system-prompt.md  registry.yaml
trellis/orchestrator/: evolution.py  job_queue.py  orchestrator.py  pool.py  team_manager.py  worker.py
trellis/tools/: blackboard_tools.py  evolution_tools.py  git_tools.py  knowledge_io.py  telegram_tools.py
(+221 files in other folders)
