[project]
name = "incubator"
version = "0.2.1"
description = "Multi-agent idea incubation pipeline"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "croniter",
    "typer[all]",
    "pyyaml",
    "rich",
    "watchfiles",
    "gitpython",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "websockets",
    "markdown",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
incubator = "incubator.cli:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["incubator*"]

[tool.setuptools.package-data]
incubator = [
    "defaults/**/*",
    "defaults/**/.*",
    "web/frontend/templates/**/*",
    "web/frontend/static/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
